--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ verify_ssl = true
 tensorflow = "*"
 pre-commit = "*"
 black = "*"
+matplotlib = "*"
+numpy = "*"
+scipy = "*"
+pandas = "*"
+scikit-learn = "*"
 
 [requires]
 python_version = "3.8"
