--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,10 @@ scipy = "*"
 pandas = "*"
 scikit-learn = "*"
 pytest = "*"
-seaborn = "*"
+dotmap = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
