--- a/src/config.json
+++ b/src/config.json
@@ -16,12 +16,17 @@
     "model": {
         "number_of_categories": 102,
         "dropout_rate": 0.2,
-        "learning_rate": 1e-3
+        "learning_rate": 1e-3,
+        "learning_rate_shrinker": 1000,
+        "metrics": "accuracy",
+        "loss": "categorical_crossentropy"
     },
     "trainer": {
         "early_stopping_patience": 3,
         "number_of_base_epochs": 10,
+        "number_of_fine_tune_epochs": 10,
         "validation_split": 0.8,
-        "verbose_training": true
+        "verbose_training": true,
+        "percentage_of_frozen_layers": 0.66
     }
 }
